@@ -7,7 +7,8 @@
 - New function 'mybasename'.
 - wtmpclean.c: avoid forward declarations.
 - wtmpclean.h: mark the function 'die' with the attribute noreturn.
-- generalize the function 'die' by adding an argument for the last error number.
+- Generalize the function 'die' by adding an argument for the last error number.
+- wtmpclean.c: execute 'mybasename' only once.
 
 * Changes in wtmpclean 0.8.0 -- Davide Madrisan (Dec 10 2013)
 - New output format for date and time in the raw dump mode.
